fix little typo

--- a/lang/es.json
+++ b/lang/es.json
@@ -35,7 +35,7 @@
             "slotsRemainingLabel": "Espacio restante: ",
 
             "itemHeaderName": "Nombre",
-            "itemHeaderSlots": "Espacio"
+            "itemHeaderSlots": "Espacios"
         }
 
     },
