localize mosnter attack roll

--- a/lang/es.json
+++ b/lang/es.json
@@ -67,7 +67,7 @@
     },
 
     "rollLabels": {
-        "monsterAttack": "to attack!",
+        "monsterAttack": "para atacar!",
         "d20": "un d20",
         "2d6": "2d6",
         "d10": "un d10",
